# dori

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
cli/: Cargo.toml  test-client.toml
cli/src/: config.rs  connection.rs  main.rs
client/: Cargo.toml  README.md
client/src/: config.rs  connection.rs  errors.rs  main.rs
clint/: .dori.toml  Cargo.toml  README.md
clint/src/: main.rs
lib/: Cargo.toml
lib/src/: handshake.rs  lib.rs  operation.rs  stream.rs
